<resources>
    <string name="app_name">Moofy</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="judul" >judul</string>
    <string name="genre" >genre</string>
    <string name="pemain" >pemain</string>
    <string name="synopsis" >synopsis</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="nama">nama</string>
    <string-array name="negara">
        <item>Holywood</item>
        <item>Eropa</item>
        <item>Asia</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="jmltiket">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
