<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/studiox"
        android:layout_marginTop="65dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="studio x" />

    <EditText
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/judul"
      />

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/genre" />

    <Spinner
        android:id="@+id/negara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/negara"
        android:layout_weight="0.14" />

    <EditText
        android:id="@+id/pemain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pemain"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="popularitas" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jam"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="jadwal: " />

        <EditText
            android:id="@+id/jam1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/jam2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/jam3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/jam4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <TextView
        android:id="@+id/bertahanSampai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bertahan Sampai: " />

    <EditText
        android:id="@+id/tanggalBertahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.61"
        android:weightSum="1">

        <EditText
            android:id="@+id/synopsis"
            android:layout_width="10dp"
            android:layout_height="103dp"
            android:ems="10"
            android:hint="@string/synopsis"
            android:inputType="textMultiLine"
            android:layout_weight="0.92" />

        <LinearLayout
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="167dp"
                android:layout_height="83dp"
                android:layout_weight="0.01" />

            <Button
                android:id="@+id/button"
                android:layout_width="156dp"
                android:layout_height="20dp"
                android:layout_weight="0.15"
                android:onClick="selectImage"
                android:text="change" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="done"
        android:text="done" />

</LinearLayout>